@@ -27,6 +27,7 @@ type alias Model =
             , name : Mensam.Space.Name
             , timezone : Mensam.Time.Timezone
             , owner : Mensam.User.Identifier
+            , users : Int
             }
     , selected : Maybe Int
     , popup : Maybe PopupModel
@@ -314,6 +315,7 @@ type MessagePure
             , name : Mensam.Space.Name
             , timezone : Mensam.Time.Timezone
             , owner : Mensam.User.Identifier
+            , users : Int
             }
         )
     | SetSelected (Maybe Int)
